add default sort
hat ein th die Classe "tabeditdefault" wird die Tabelle mit dieser Spalte vorsortiert.

--- a/exampel.htm
+++ b/exampel.htm
@@ -111,7 +111,7 @@
 <table class="tabeditrow tabgreen">
 	 <tr>
 		<th>Fahrzeuge</th>
-		<th>Farbe</th>
+		<th class="tabeditdefault">Farbe</th>
 		<th>Hubraum (cm³)</th>
 		<th>Gewicht (kg)</th>
 	  </tr>
