--- a/exampel.htm
+++ b/exampel.htm
@@ -75,7 +75,7 @@
 
 <body>
 <h1>TableEdit</h1>
-<table class="tabeditrow">
+<table class="tabedit">
 	 <tr>
 		<th>Buchstabe</th>
 		<th>Zahlen</th>
@@ -108,7 +108,7 @@
 	</tr>
 </table>
 
-<table class="tabeditrow tabgreen">
+<table class="tabedit tabgreen">
 	 <tr>
 		<th>Fahrzeuge</th>
 		<th class="tabeditdefault">Farbe</th>
@@ -140,6 +140,38 @@
 		<td>14500</td>
 	</tr>
 </table>
+
+<table class="tabedit">
+	 <tr>
+		<th style="width:180px">Fahrzeuge</th>
+		<td>Auto</td>
+		<td>Fahrrad</td>
+		<td>Motorad</td>
+		<td>LKW</td>
+	  </tr>
+	<tr>
+		<th class="tabeditdefault">Farbe</th>
+		<td>rot</td>
+		<td>grau</td>
+		<td>amber</td>
+		<td>grün</td>
+	</tr>
+	<tr>
+		<th>Hubraum (cm³)</th>
+		<td>1800</td>
+		<td></td>
+		<td>494</td>
+		<td>2330</td>
+	</tr>
+	<tr>
+		<th>Gewicht (kg)</th>
+		<td>2000</td>
+		<td>8</td>
+		<td>122</td>
+		<td>14500</td>
+	</tr>
+</table>
+
 
 </body>
 </html>
