--- a/example.htm
+++ b/example.htm
@@ -83,31 +83,37 @@
 		<th>Buchstabe</th>
 		<th>Zahlen</th>
 		<th>Dinge</th>
+		<th>Datum</th>
 	  </tr>
 	<tr>
 		<td>b</td>
 		<td>4</td>
 		<td>Appel</td>
+		<td>01.01.2018</td>
 	</tr>
 	<tr>
 		<td>A</td>
 		<td>3</td>
 		<td>1.Birne</td>
+		<td>12.01.2008</td>
 	</tr>
 	<tr>
 		<td>C</td>
 		<td>5</td>
 		<td>2.Birne</td>
+		<td>06.06.1912</td>
 	</tr>
 	<tr>
 		<td>D</td>
 		<td>2</td>
 		<td>Bus</td>
+		<td>06.06.1988</td>
 	</tr>
 	<tr>
 		<td>E</td>
 		<td>1</td>
 		<td>Kegel</td>
+		<td>01.02.1912</td>
 	</tr>
 </table>
 
